# hyaena-sdk

./: LICENSE  pyproject.toml
hyaena/: __init__.py  _client.py  _event.py  _global.py  _scope.py  _transport.py
hyaena/exc/: errors.py
hyaena/integrations/: fastapi.py
tests/: conftest.py  test_event.py  test_scope.py  test_transport.py
tests/integrations/: test_fastapi.py
