[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyaena-sdk"
version = "0.1.0"
description = "Lightweight error monitoring SDK"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hyaena"]
